fix clipping in safari

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
-/* Stylez */
-body {font-family: Source Sans Pro, Bitter, Quicksand, Merriweather; margin: 0 auto; background: #efefef; line-height: 1.8em; padding: 12px; box-sizing: border-box; color: #333;}
+/* Stylez
+Franklin Gothic Book*/
+
+body {font-family: Source Sans Pro, Helvetica Neue, sans-serif; margin: 0 auto; background: #efefef; line-height: 1.8em; padding: 12px; box-sizing: border-box; color: #333;}
 body, html {height: 100%;}
 
 .wrapper {box-sizing: border-box; background: #fff; box-shadow: 0 0 5px #888; box-shadow: 0 0 5px #888; height: 100%; overflow: auto; }
@@ -11,7 +13,7 @@ p {font-weight: 200; font-size: 20px;}
 
 .name {font-family: Playfair Display; font-size: 50px; font-weight: 900; padding-bottom: 20px;}
 
-.container {margin: 0 auto; width: 600px; height: 400px; padding: 80px 0px; overflow: auto;}
+.container {margin: 0 auto; width: 600px; height: 400px; padding: 80px 12px; overflow: auto;}
 
 .meta {text-transform: uppercase; font-family: Courier New, Quicksand, "Helvetica Neue", "Arial", sans-serif; font-size: 11px; letter-spacing: .15em;}
 .meta a:hover {border-bottom: 1px solid #CCFF26; color: #333;}
